tests/baselines/reference/typeGuardsDefeat.errors.txt
tests/cases/conformance/expressions/typeGuards/typeGuardsDefeat.ts(21,20): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
tests/cases/conformance/expressions/typeGuards/typeGuardsDefeat.ts(21,24): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
tests/cases/conformance/expressions/typeGuards/typeGuardsDefeat.ts(32,23): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
tests/cases/conformance/expressions/typeGuards/typeGuardsDefeat.ts(32,27): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.


==== tests/cases/conformance/expressions/typeGuards/typeGuardsDefeat.ts (4 errors) ====
    // Also note that it is possible to defeat a type guard by calling a function that changes the 
    // type of the guarded variable.
    function foo(x: number | string) {
        function f() {
            x = 10;
        }
        if (typeof x === "string") {
            f();
            return x.length; // string
        }
        else {
            return x++; // number
        }
    }
    function foo2(x: number | string) {
        if (typeof x === "string") {
            return x.length; // string
        }
        else {
            var f = function () {
                return x * x;
                       ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
                           ~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
            };
        }
        x = "hello";
        f();
    }
    function foo3(x: number | string) {
        if (typeof x === "string") {
            return x.length; // string
        }
        else {
            var f = () => x * x;
                          ~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
                              ~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
        }
        x = "hello";
        f();
    }
    